{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 4,
  "lineage": "84633c26-bc93-8488-895e-8fffbcac1b4c",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:806948735534:vpc/vpc-07fd9ad9246a36c87",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00b4ceb2aa9e0a2da",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b0dda164a0221544",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07fd9ad9246a36c87",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02b204598d6f2eb3e",
            "owner_id": "806948735534"
          }
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:806948735534:security-group/sg-04a341855f3587153",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-04a341855f3587153",
            "ingress": [],
            "name": "dann-cluster-cluster-20250906181328129600000001",
            "name_prefix": "dann-cluster-cluster-",
            "owner_id": "806948735534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dann-cluster-cluster"
            },
            "tags_all": {
              "Name": "dann-cluster-cluster",
              "owner": "hv.lopez",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fd9ad9246a36c87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:806948735534:security-group/sg-028c177f19ed48f2d",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-028c177f19ed48f2d",
            "ingress": [],
            "name": "dann-cluster-node-20250906181328129600000002",
            "name_prefix": "dann-cluster-node-",
            "owner_id": "806948735534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dann-cluster-node",
              "kubernetes.io/cluster/dann-cluster": "owned"
            },
            "tags_all": {
              "Name": "dann-cluster-node",
              "kubernetes.io/cluster/dann-cluster": "owned",
              "owner": "hv.lopez",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fd9ad9246a36c87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-114352930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a341855f3587153",
            "security_group_rule_id": "sgr-02f1df3ce48e449ef",
            "self": false,
            "source_security_group_id": "sg-028c177f19ed48f2d",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-833853928",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a341855f3587153",
            "security_group_rule_id": "sgr-002c87630bd7658c3",
            "self": false,
            "source_security_group_id": "sg-028c177f19ed48f2d",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2577647662",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a341855f3587153",
            "security_group_rule_id": "sgr-0675a8476e1bd1cc5",
            "self": false,
            "source_security_group_id": "sg-028c177f19ed48f2d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1390504241",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-05fd8bd8650651884",
            "self": false,
            "source_security_group_id": "sg-04a341855f3587153",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-1941260378",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-0295156725d062189",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_to_internet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes to connect to the internet for connecting to DB and call the ingress",
            "from_port": 0,
            "id": "sgrule-490727050",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-00afcb281338d9512",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-2892723524",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-034b00eb44b5fbf2f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-3539292233",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-051f5eb44343bdcbe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3668817144",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-09a55bee7c00bd85c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1422538398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-0695ecf3525d00cd4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-328896713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-04bed7050f4999b58",
            "self": false,
            "source_security_group_id": "sg-04a341855f3587153",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3954986635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-079aec2ba5094a82b",
            "self": false,
            "source_security_group_id": "sg-04a341855f3587153",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_control_plane_to_nodes_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS Control Plane to connect to Ingress webhook",
            "from_port": 8443,
            "id": "sgrule-3890262498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-0904d153d3ab23bed",
            "self": false,
            "source_security_group_id": "sg-04a341855f3587153",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_to_nodes_all_traffic",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other on all ports",
            "from_port": 0,
            "id": "sgrule-325760549",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-011e50fb33d40c908",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4286156467",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-0a8420d9bb7e42d39",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1529228636",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-028c177f19ed48f2d",
            "security_group_rule_id": "sgr-07d8a922e61152b8f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.default",
            "module.eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks_cluster.module.eks_managed_node_group[\"default\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:806948735534:security-group/sg-087e5d63aa307cf6d",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-087e5d63aa307cf6d",
            "ingress": [],
            "name": "default-eks-node-group-20250906181328138300000003",
            "name_prefix": "default-eks-node-group-",
            "owner_id": "806948735534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-eks-node-group"
            },
            "tags_all": {
              "Name": "default-eks-node-group",
              "owner": "hv.lopez",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fd9ad9246a36c87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_iam_roles.eks_node",
            "module.eks_cluster.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks_cluster.module.eks_managed_node_group[\"default\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}